--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "cbt_tunnels": "^0.9.7",
     "request": "^2.81.0",
-    "selenium-webdriver": "^3.6.0"
+    "selenium-webdriver": "^3.6.0",
+    "util": "^0.11.0"
   },
   "devDependencies": {},
   "scripts": {
