Test is working with real API call. Need to implement a delay on running the test before closing the tunnel.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "cbt_test.js",
   "dependencies": {
+    "async": "^2.6.1",
     "cbt_tunnels": "^0.9.7",
     "request": "^2.81.0",
-    "selenium-webdriver": "^3.6.0",
+    "selenium-webdriver": "^3.6.0"
   },
   "devDependencies": {},
   "scripts": {
