--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "async": "^2.6.1",
     "cbt_tunnels": "^0.9.7",
+    "co": "^4.6.0",
     "request": "^2.81.0",
+    "request-promise": "^4.2.2",
     "selenium-webdriver": "^3.6.0"
   },
   "devDependencies": {},
